csファイル更新

--- a/Resources/character/plist/kyoujin.plist
+++ b/Resources/character/plist/kyoujin.plist
@@ -3,30 +3,7 @@
 <plist version="1.0">
 	<dict>
 		<key>frames</key>
-		<dict>
-			<key>character/plist/kyoujin/effect_1.png</key>
-			<dict>
-				<key>frame</key>
-				<string>{{0,0},{64,64}}</string>
-				<key>offset</key>
-				<string>{0,0}</string>
-				<key>rotated</key>
-				<false />
-				<key>sourceSize</key>
-				<string>{64,64}</string>
-			</dict>
-			<key>character/plist/kyoujin/effect_2.png</key>
-			<dict>
-				<key>frame</key>
-				<string>{{0,64},{64,64}}</string>
-				<key>offset</key>
-				<string>{0,0}</string>
-				<key>rotated</key>
-				<false />
-				<key>sourceSize</key>
-				<string>{64,64}</string>
-			</dict>
-		</dict>
+		<dict />
 		<key>metadata</key>
 		<dict>
 			<key>format</key>
@@ -36,14 +13,14 @@
 			<key>realTextureFileName</key>
 			<string>kyoujin.png</string>
 			<key>size</key>
-			<string>{64,128}</string>
+			<string>{32,32}</string>
 		</dict>
 		<key>texture</key>
 		<dict>
 			<key>width</key>
-			<integer>64</integer>
+			<integer>32</integer>
 			<key>height</key>
-			<integer>128</integer>
+			<integer>32</integer>
 		</dict>
 	</dict>
 </plist>
