--- a/Resources/img/character/ranmaru.plist
+++ b/Resources/img/character/ranmaru.plist
@@ -7,7 +7,7 @@
 			<key>ranmaru_0_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1549},{23,34}}</string>
+				<string>{{0,3746},{23,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -21,7 +21,7 @@
 			<key>ranmaru_0_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1199},{29,34}}</string>
+				<string>{{0,3396},{29,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -35,7 +35,7 @@
 			<key>ranmaru_0_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1339},{25,34}}</string>
+				<string>{{0,3501},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -49,7 +49,7 @@
 			<key>ranmaru_1_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1479},{24,34}}</string>
+				<string>{{0,3676},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -63,7 +63,7 @@
 			<key>ranmaru_1_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1269},{27,34}}</string>
+				<string>{{0,3466},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -77,7 +77,7 @@
 			<key>ranmaru_1_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1444},{24,34}}</string>
+				<string>{{0,3606},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -91,7 +91,7 @@
 			<key>ranmaru_2_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1374},{24,34}}</string>
+				<string>{{0,3571},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -105,7 +105,7 @@
 			<key>ranmaru_2_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1234},{27,34}}</string>
+				<string>{{0,3431},{27,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -119,7 +119,7 @@
 			<key>ranmaru_2_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1409},{24,34}}</string>
+				<string>{{0,3641},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -133,7 +133,7 @@
 			<key>ranmaru_3_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1584},{23,34}}</string>
+				<string>{{0,3781},{23,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -147,7 +147,7 @@
 			<key>ranmaru_3_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1304},{25,34}}</string>
+				<string>{{0,3536},{25,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -161,7 +161,7 @@
 			<key>ranmaru_3_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,1514},{24,34}}</string>
+				<string>{{0,3711},{24,34}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -175,13 +175,13 @@
 			<key>ranmaru_s_0.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{387,1198}}</string>
+				<string>{{455,1132},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{242,0},{387,1198}}</string>
+				<string>{{133,54},{454,1131}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -189,13 +189,13 @@
 			<key>ranmaru_s_1.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{0,0},{387,1198}}</string>
+				<string>{{455,1132},{454,1131}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
 				<false/>
 				<key>sourceColorRect</key>
-				<string>{{242,0},{387,1198}}</string>
+				<string>{{133,54},{454,1131}}</string>
 				<key>sourceSize</key>
 				<string>{800,1200}</string>
 			</dict>
@@ -203,7 +203,63 @@
 			<key>ranmaru_s_2.png</key>
 			<dict>
 				<key>frame</key>
-				<string>{{388,0},{386,1195}}</string>
+				<string>{{0,0},{454,1131}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{133,54},{454,1131}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>ranmaru_s_3.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{455,0},{454,1131}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{133,54},{454,1131}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>ranmaru_s_4.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,2264},{454,1131}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{133,54},{454,1131}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>ranmaru_s_5.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{0,1132},{454,1131}}</string>
+				<key>offset</key>
+				<string>{0,0}</string>
+				<key>rotated</key>
+				<false/>
+				<key>sourceColorRect</key>
+				<string>{{133,54},{454,1131}}</string>
+				<key>sourceSize</key>
+				<string>{800,1200}</string>
+			</dict>
+
+			<key>ranmaru_s_6.png</key>
+			<dict>
+				<key>frame</key>
+				<string>{{455,2264},{386,1195}}</string>
 				<key>offset</key>
 				<string>{0,0}</string>
 				<key>rotated</key>
@@ -221,7 +277,7 @@
 			<key>format</key>
 			<integer>2</integer>
 			<key>size</key>
-			<string>{1024,2048}</string>
+			<string>{1024,4096}</string>
 			<key>textureFileName</key>
 			<string>ranmaru.png</string>
 			</dict>
